Homepage component fixes (#14214)
* Define vertical gap in featured card block content

* Fix primary nav open state padding offset

* Fix primary nav intersection observer rootMargin value to animate the wordmark when hidden by the nav bar

* Fix homepage kinetic type wordmark spacing

--- a/foundation_cms/static/scss/components/primary_nav.scss
+++ b/foundation_cms/static/scss/components/primary_nav.scss
@@ -295,7 +295,7 @@ $hamburger-bar-spacing: 0.8rem;
 body.primary-nav-ns-open {
   height: 100vh;
   overflow: hidden;
-  padding-top: 8rem;
+  padding-top: 5rem;
 
   .primary-nav-ns {
     position: fixed;
